# NYUTron

./: .gitignore  README.md  pyproject.toml  setup.cfg
NYUTriton/: .gitignore  README.md  basic_inference_triton.py  basic_triton_client.py  convert_hf_to_trt.sh  deploy_model.py  docker-compose.yml  helpers.py  queries.txt  serialize_txt.py  start_prometheus_service.sh  start_triton_server.sh
NYUTriton/Docker_TRITONServer/: Dockerfile
NYUTriton/dev/: nytlogger.py
NYUTriton/prometheus/: prometheus.yml
NYUTriton/templates/: configtemplate.pbtxt  mdltemplate.py
baselines/: 1_split_data.py  2_run_struct_baseline.sh  2_struct_xg_boost.py  3_run_text_baseline.sh  3_tfidf_xg_boost.py  4_redcap_processing.py
baselines/configs/: insurance.yaml  los.yaml  mortality.yaml  readmission.yaml  readmission_toy.yaml
documentation/: experiment_and_scripts.md  finetune.md  installation.md  pretrain.md  requirements.txt
documentation/blogs/: nyutron.md
examples/: 1_make_pretrain_dataset.py  2_launch_pretrain_multinode.sh  2_pretrain.py  3_make_finetune_dataset.py  4_finetune.py  5_eval_ckpt.py  6_finetune_i2b2.py  6_i2b2.sh  nyutron_labels.npy  nyutron_probs.npy
examples/utils/: i2b2.yaml  i2b2_2012_load.py  tokenize_i2b2.py
src/nyutron/: data_utils.py  train_utils.py
synthetic_data/raw/: add_labels.py  generate_synthetic_data.py  synthetic_comorbidity_larger_w_labels.csv  synthetic_comorbidity_temporal.csv  synthetic_data.csv  synthetic_data_larger.csv  synthetic_readmission.csv  synthetic_readmission_larger_w_labels.csv  (+1 more)
tests/: test_data_processing.py
(+119 files in other folders)
